--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   role_name: falcon-installer
   author: CrowdStrike Solution Architecture
-  description: Install and configure CrowdStrike's Falcon sensor on Linux, Windows, and OSX.
+  description: --CURRENTLY IN DEVELOPMENT -- Install and configure CrowdStrike's Falcon sensor on Linux using Ansible.
   company: CrowdStrike
 
   issue_tracker_url: https://github.com/CrowdStrike/ansible-role-crowdstrike-falcon
@@ -80,4 +80,3 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  
