update URL-based install README

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -43,6 +43,11 @@ crowdstrike:
     remove_agent_id: false
 
     #
+    # Your Falcon Customer ID (CID)
+    #
+    cid: yourCID123
+
+    #
     # PARAMETERS FOR API-BASED INSTALLATION
     #
     api:
