Add repo method, start documenting code

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,6 +48,12 @@ crowdstrike:
     cid: yourCID123
 
     #
+    # PARAMETERS FOR CUSTOM URL INSTALLATION
+    #
+    download_url: ""
+
+
+    #
     # PARAMETERS FOR API-BASED INSTALLATION
     #
     api:
