Add linux packager vars

--- a/roles/falcon/vars/main.yml
+++ b/roles/falcon/vars/main.yml
@@ -1,2 +1,11 @@
 ---
 # vars file for crowdstrike-falcon-role
+linux_packagers: "{{ rpm_packagers + dpkg_packagers }}"
+
+rpm_packagers:
+  - yum
+  - rpm
+  - dnf
+
+dpkg_packagers:
+  - apt
