--- a/roles/falcon/tasks/url.yml
+++ b/roles/falcon/tasks/url.yml
@@ -1,27 +1,16 @@
 ---
 # Tasks for Installing CrowdStrike's Falcon Sensor via URL
-
-- name: CrowdStrike Falcon Installer | Downloading Installation Package from URL
+- name: CrowdStrike Falcon | Downloading Installation Package from URL
   get_url:
-    url: "{{ crowdstrike.download_url }}"
-    dest: /tmp
-  register: crowdstrike.sensor_download
-  retries: "{{ crowdstrike.retries }}"
-  delay: "{{ crowdstrike.delay }}"
-  until: crowdstrike.sensor_download is success
+    url: "{{ falcon_download_url }}"
+    dest: "{{ falcon_install_tmp_dir }}"
+  when:
+    - falcon_download_url
+    - falcon_install_tmp_dir
+  register: falcon_sensor_download
+  retries: "{{ falcon_retries }}"
+  delay: "{{ falcon_delay }}"
+  until: falcon_sensor_download is success
 
-- name: CrowdStrike Falcon Installer | Installing Sensor via APT
-  apt:
-    deb: "{{ crowdstrike.sensor_download.dest }}"
-  when: ansible_pkg_mgr == 'apt'
-  register: crowdstrike.apt_installed
-
-- name: CrowdStrike Falcon Installer | Installing Sensor via YUM
-  yum:
-    name: "{{ crowdstrike.sensor_download.dest }}"
-  when: ansible_pkg_mgr == 'yum'
-  register: crowdstrike.yum_installed
-
-- name: CrowdStrike Falcon Installer | Storing Package Installation Result
-  set_fact:
-    crowdstrike.sensor_install_state: crowdstrike.apt_installer.changed or crowdstrike.yum_installed.changed
+- set_fact:
+    non_win_pkg: "{{ falcon_sensor_download.dest }}"
