Update and fix API tasks

--- a/roles/falcon/tasks/api.yml
+++ b/roles/falcon/tasks/api.yml
@@ -1,82 +1,57 @@
-
-- name: CrowdStrike Falcon Installer | Authenticate to CrowdStrike API
+---
+- name: CrowdStrike Falcon | Authenticate to CrowdStrike API
   uri:
-    url: https://{{ crowdstrike.api.url }}/oauth2/token
+    url: "https://{{ falcon_api_url }}/oauth2/token"
     method: POST
-    body: ???
-    return_content: yes
+    body_format: json
+    body: 
+      "client_id={{ falcon_api_client_id }}&client_secret={{ falcon_api_client_secret }}"
+    return_content: true
+    status_code: 201
     headers:
         content-type: application/x-www-form-urlencoded
-    register: crowdstrike.oauth2_token
+  register: falcon_api_oauth2_token
 
-#crowdstrike_oauth2_token=$(curl --request POST \
-#--silent \
-#--url "https://$target_cloud_api/oauth2/token" \
-#--header "content-type: application/x-www-form-urlencoded" \
-#--data client_id=$CS_API_CLIENT_ID \
-#--data client_secret=$CS_API_CLIENT_SECRET | \
-#  python3 -c "import sys, json; print(json.load(sys.stdin)['access_token'])")
-
-- name: CrowdStrike Falcon Installer | API Authorization Output
-  debug:
-    msg: "{{ crowdstrike.oauth2_token.json }}"
-
-- name: CrowdStrike Falcon Installer | Detect Target CID Based on Credentials
+- name: CrowdStrike Falcon | Detect Target CID Based on Credentials
   uri:
-    url: https://{{ crowdstrike.api.url }}/sensors/queries/isntallers/ccid/v1
+    url: https://{{ falcon_api_url }}/sensors/queries/installers/ccid/v1
     method: GET
+    return_content: true
     headers:
-        Content-Type: application/json
-    register: crowdstrike.cid
-#target_cid=$(curl --request GET \
-#  --silent \
-#  --url "https://$target_cloud_api/sensors/queries/installers/ccid/v1" \
-#  --header "Content-Type: application/json" | \
-#    python3 -c "import sys, json; print(json.load(sys.stdin)['resources'][0])")
-#echo "Target CID: $target_cid"
+      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+      Content-Type: application/json
+  register: falcon_api_target_cid
 
-- name: CrowdStrike Falcon Installer | Detect SHA256 of Latest Linux Sensor
+- name: CrowdStrike Falcon | Detect SHA256 of Latest Linux Sensor
   uri:
-    url: https://{{ crowdstrike.api.url }}/sensors/combined/installers/v1?filter=platform%3A%22linux*%22%2Bos%3A%22$target_os%22&=&sort=version.desc&limit=1
+    url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
     method: GET
+    return_content: true
     headers:
-        authorization: Bearer {{ crowdstrike.oauth2_token }}
-    register: crowdstrike.sha256
+      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+  register: falcon_api_sha_hash
 
-#latest_sensor_version_sha256=$(curl --request GET \
-#  --silent \
-#  --url "https://$target_cloud_api/sensors/combined/installers/v1?filter=platform%3A%22linux*%22%2Bos%3A%22$target_os%22&=&sort=version.desc&limit=1" \
-# --header "authorization: Bearer $crowdstrike_oauth2_token" | \
-#    python3 -c "import sys, json; print(json.load(sys.stdin)['resources'][0]['sha256'])")
-#echo "Latest version: $latest_sensor_version_sha256"
-
-- name: CrowdStrike Falcon Installer | Detect Name of Latest Linux Sensor
+- name: CrowdStrike Falcon | Detect Name of Latest Linux Sensor
   uri:
-    url: https://{{ crowdstrike.api.url }}/sensors/combined/installers/v1?filter=platform%3A%22linux*%22%2Bos%3A%22$target_os%22&=&sort=version.desc&limit=1
+    url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
     method: GET
+    return_content: true
     headers:
-        authorization: Bearer {{ crowdstrike.oauth2_token }}
-    register: crowdstrike.installer_version
-# Get infos on the latest sensor version
-#latest_sensor_version_infos=$(curl --request GET \
-#  --silent \
-#  --url "https://$target_cloud_api/sensors/combined/installers/v1?filter=platform%3A%22linux*%22%2Bos%3A%22$target_os%22&=&sort=version.desc&limit=1" \
-# --header "authorization: Bearer $crowdstrike_oauth2_token")
+      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+  register: falcon_api_installer_version
 
-# extract info from the JSON
-#latest_sha256=$(echo $latest_sensor_version_infos | python3 -c "import sys, json; print(json.load(sys.stdin)['resources'][0]['sha256'])")
-#latest_name=$(echo $latest_sensor_version_infos | python3 -c "import sys, json; print(json.load(sys.stdin)['resources'][0]['name'])")
+- name: CrowdStrike Falcon | Download Latest Sensor Installation Package
+  get_url:
+    url: https://{{ falcon_api_url }}/sensors/entities/download-installer/v1?id={{ falcon_api_sha_hash.json.resources[0].sha256 }}
+    dest: "{{ falcon_install_tmp_dir }}"
+    checksum: "sha256:{{ falcon_api_sha_hash.json.resources[0].sha256 }}"
+    headers:
+      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+  register: falcon_api_installer_package
 
-- name: CrowdStrike Falcon Installer | Download Latest Linux Sensor Installation Package
-  uri:
-    url: https://{{ crowdstrike.api.url }}/sensors/entities/download-installer/v1?id={{ crowdstrike.sha256 }}
-  method: GET
-  headers:
-      authorization: Bearer {{ crowdstrike.oauth2_token }}
-  register: crowdstrike.installer_package
-#echo "Download the latest version : $latest_description"
-#echo "Save it to : $target_path$latest_name"
-#curl --request GET \
-#  --url "https://$target_cloud_api/sensors/entities/download-installer/v1?id=$latest_sensor_version_sha256" \
-#  --header "authorization: Bearer $crowdstrike_oauth2_token" \
-#  --output "$target_path$latest_name"
+- set_fact:
+    falcon_cid: "{{ falcon_api_target_cid.json.resources[0] }}"
+  when: not falcon_cid
+
+- set_fact:
+    non_win_pkg: "{{ falcon_api_installer_package.dest }}"
