--- a/roles/falcon/defaults/main.yml
+++ b/roles/falcon/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for crowdstrike-falcon-role
 
 # Your Falcon Customer ID (CID). Optional when using 'api' as an install method.
-# Required for any other installation method
+# Required for any other installation method.
 #
 falcon_cid:
 
@@ -55,7 +55,7 @@ falcon_api_client_secret: ""
 falcon_install_tmp_dir: ""
 
 # If the installation method is 'url', provide the url for the sensor to
-# be downloaded.
+# be downloaded from.
 #
 falcon_download_url:
 
