--- a/roles/falcon/tasks/install.yml
+++ b/roles/falcon/tasks/install.yml
@@ -16,7 +16,7 @@
       - ansible_pkg_mgr in linux_packagers
       - falcon_sensor_download is not defined
 
-  - name: CrowdStrike Falcon | Import CrowdStrike Falcon RPM key from a file
+  - name: CrowdStrike Falcon | Import CrowdStrike Falcon RPM GPG key from a file
     rpm_key:
       state: present
       key: '{{ falcon_gpg_key }}'
