--- a/roles/falcon/tasks/preinstall.yml
+++ b/roles/falcon/tasks/preinstall.yml
@@ -34,7 +34,7 @@
     falcon_os_family: "{{ ansible_system | lower }}"
   when: ansible_distribution == "Amazon"
 
-- name: "CrowdStrike Falcon | Determine if Target OS Is {{ ansible_distribution }}"
+- name: "CrowdStrike Falcon | Endpoint Operating System Detected Is {{ ansible_distribution }}"
   set_fact:
      falcon_target_os: "{{ ansible_distribution }}"
      falcon_os_family: "{{ ansible_system | lower }}"
