Update Falcon role and Collection
- Clean up Readmes
- Bump verison to 1.0.0 for linux support
- Update role names

--- a/roles/falcon_installation/defaults/main.yml
+++ b/roles/falcon_installation/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for crowdstrike-falcon-role
+# defaults file for falcon_installation
 
 # Your Falcon Customer ID (CID). Optional when using 'api' as an install method.
 # Required for any other installation method.
