--- a/galaxy.yml
+++ b/galaxy.yml
@@ -5,10 +5,10 @@
 namespace: crowdstrike
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: crowdstrike
+name: falcon
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 0.0.1
+version: 1.0.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -26,8 +26,8 @@ description: >
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
-license:
-- Unlicense
+#license:
+#- Unlicense
 
 # The path to the license file for the collection. This path is relative to the root of the collection. This key is
 # mutually exclusive with 'license'
